2006-04-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* loadhist.el (unload-feature): A bit of sanity check of
	load-history entries.  Cancel timer-vars before unbinding them.

	* hexl.el (hexl-isearch-search-function): Fix regexp-building code to
	quote special chars, and make the trick work on the hex part of the
	buffer as well.
	(hexl-mode, hexl-save-buffer, hexl-mode-exit)
	(hexl-maybe-dehexlify-buffer): Use restore-buffer-modified-p.

	* startup.el (normal-splash-screen): Fix last change so we don't wait
	2 minutes if we don't show the splash screen.

2006-04-11  Carsten Dominik  <dominik@science.uva.nl>

	* textmodes/org.el (org-export-plain-list-max-depth)
	(org-table-spaces-around-separators)
	(org-radio-targets, org-activate-camels)
	(org-table-spaces-around-invisible-separators): Options removed.
	(org-time-stamp-rounding-minutes, org-remember-templates)
	(org-ellipsis, org-activate-links, org-descriptive-links):
	New options.
	(org-remember-apply-template, org-current-time)
	(org-finish-edit-table-field)
	(org-link-unescape, org-link-escape)
	(org-string-width, org-table-clean-line, org-html-do-expand)
	(org-edit-agenda-file-list, org-store-new-agenda-file-list)
	(org-read-agenda-file-list): New functions.
	(org-table-edit-field)
	(org-table-create-or-convert-from-region): New commands
	(org-table-toggle-vline-visibility): Command removed.
	(org-table-convert-region): Made a command.
	(orgtbl-deleta-backward-char,orgtbl-delete-char): Remove commands.
	Replace with the normal org- functions.
	(org-self-insert-command): Don't trigger realign unnecessarily
	when blanking a field that is not full.
	(org-mode): `Set buffer-invisibility-spec' for links.
	(org-activate-links2): Hide link part and only show descriptive
	part of the link.
	(org-insert-link): Modify for new linking system.
	(org-store-link): Store description separately, for use by
	`org-insert-link'.
	(org-table-align): Use `org-string-width'.